Fix navigation and search alignment styles.

--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -797,13 +797,6 @@ header {
 
 /* == Navigation == */
 
-.navigation {
-    list-style:none;
-    margin: 2em 0 0;
-    
-    li { display:inline; }
-}
-
 .top ul {
     border: solid #ccc; 
     border-width:0 0 1px 0;
@@ -938,7 +931,7 @@ header {
 
 .item-pagination {
     border-top:1px solid #ccc; 
-    margin-bottom:1.5em;
+    margin: 0 0 1.5em 0;
     overflow:hidden;
     padding-top:1.5em;
     
@@ -973,9 +966,15 @@ header {
             font-size:.875em;
             margin-top:.25em;
             text-decoration:none;
+            display: inline-block;
+            clear: both;
         }
         
         h2 {display:none;}
+        
+        input[type=text], input[type=submit] { float: left; }
+        
+        input[type=text] { margin: 0 5px 0 0; }
     }
     
     #submit_search { margin: -1px 0 0 5px; }
